Allow Java 17 for Spark 3.3+3.4 tests
Allows running Spark tests against Java 17, if the build's running with
Java 17 or newer. Otherwise use Java 11.

CI only uses Java 11, so there's no change in CI.